# compassionly-api

./: .env  .gitignore  Dockerfile  Dockerfile.old  README-FULL.md  README.md  app.yaml  env  openapi.json  prestart.sh  pyproject.toml  requirements.txt  test-firebase.html  tests-start.sh  vertexServiceAccount.json
.github/workflows/: build_gcr_from_source.yaml
app/: crud.py  main.py  models.py
app/alembic/: .env  env.py
app/alembic/versions/: 2c2ea20f37a4_add_user_topic_rating_table.py  2c2ea20f37a4_add_usertopicrating_table.py  4f7c4401127f_relation_for_college_major.py  5f053c4e8c2d_merge_addusertopic.py  7b6f7337593d_rename_prospect_id_to_future_prospect_id.py  971ab6244eff_add_major_level_to_college_detail.py  9afe7105662d_add_module_topic_category.py  af4e1afa9f64_adjust_table_major.py  b9629505f9b3_revisi_modul_user_dan_school.py  e2412789c190_initialize_models.py  e29bd299cebe_modul_college.py  e3fd1167763d_fix_foreign_keys_in_major_prospects.py  e462a42a9a21_change_column_type_of_gender_from_enum_.py  ec76d464675a_add_module_topics.py  f30f21e2cbc6_add_topic_category_module_with_relation.py  faaac2c77696_add_weight_to_major.py
app/api/: deps.py  main.py
app/api/routes/: auth.py  colleges.py  course.py  majors.py  schools.py  user_topic_rating.py  users.py
app/api/routes/ml_model/: predict.py
app/api/routes/topics/: topic_category.py  topics.py  user_topic_rating.py
app/core/: config.py  db.py  firebase.py  security.py
assets/: data_bidang.xlsx
assets/model_numeric/: features_normalized.npy  targets.npy
assets/quick_recommendation/: instances.json
