[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "0.30.1"
fastapi = "0.111.0"
python-multipart = "0.0.9"
email-validator = "2.1.1"
passlib = "1.7.4"
tenacity = "8.2.3"
pydantic = "2.7.3"
emails = "0.6"

gunicorn = "22.0.0"
jinja2 = "3.1.4"
alembic = "1.13.1"
httpx = "0.27.0"
psycopg = "3.1.18"
sqlmodel = "0.0.16"
# Pin bcrypt until passlib supports the latest
bcrypt = "4.0.1"
pydantic-settings = "2.2.1"
sentry-sdk = "1.41.0"
pyjwt = "2.8.0"
firebase-admin = "6.5.0"
absl-py = "2.1.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
astunparse = "1.6.3"
build = "1.2.1"
cachecontrol = "0.14.0"
cachetools = "5.3.3"
certifi = "2024.6.2"
cffi = "1.16.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
chex = "0.1.86"
cleo = "2.1.0"
click = "8.1.7"
crashtest = "0.4.1"
cryptography = "42.0.7"
cssselect = "1.2.0"
cssutils = "2.9.0"
distlib = "0.3.8"
dnspython = "2.6.1"
docstring-parser = "0.16"
dulwich = "0.21.7"
etils = "1.7.0"
exceptiongroup = "1.2.1"
fastapi-cli = "0.0.4"
fastjsonschema = "2.19.1"
filelock = "3.14.0"
flatbuffers = "24.3.25"
flax = "0.8.4"
fsspec = "2024.6.0"
gast = "0.5.4"
google-api-core = "2.19.0"
google-api-python-client = "2.130.0"
google-auth = "2.30.0"
google-auth-httplib2 = "0.2.0"
google-cloud-aiplatform = "1.50.0"
google-cloud-bigquery = "3.24.0"
google-cloud-core = "2.4.1"
google-cloud-firestore = "2.16.0"
google-cloud-resource-manager = "1.12.3"
google-cloud-storage = "2.16.0"
google-crc32c = "1.5.0"
google-pasta = "0.2.0"
google-resumable-media = "2.7.0"
googleapis-common-protos = "1.63.0"
greenlet = "3.0.3"
grpc-google-iam-v1 = "0.13.0"
grpcio = "1.64.1"
grpcio-status = "1.62.2"
h11 = "0.14.0"
h5py = "3.11.0"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httptools = "0.6.1"
huggingface-hub = "0.23.3"
idna = "3.7"
importlib-metadata = "7.1.0"
importlib-resources = "6.4.0"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jax = "0.4.28"
jaxlib = "0.4.28"
jeepney = "0.8.0"
joblib = "1.4.2"
keras = "3.3.3"
keyring = "24.3.1"
libclang = "18.1.1"
lxml = "5.1.0"
mako = "1.3.2"
markdown = "3.6"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
ml-dtypes = "0.3.2"
more-itertools = "10.2.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
namex = "0.0.8"
nest-asyncio = "1.6.0"
networkx = "3.3"
numpy = "1.26.4"
nvidia-cublas-cu12 = "12.1.3.1"
nvidia-cuda-cupti-cu12 = "12.1.105"
nvidia-cuda-nvrtc-cu12 = "12.1.105"
nvidia-cuda-runtime-cu12 = "12.1.105"
nvidia-cudnn-cu12 = "8.9.2.26"
nvidia-cufft-cu12 = "11.0.2.54"
nvidia-curand-cu12 = "10.3.2.106"
nvidia-cusolver-cu12 = "11.4.5.107"
nvidia-cusparse-cu12 = "12.1.0.106"
nvidia-nccl-cu12 = "2.20.5"
nvidia-nvjitlink-cu12 = "12.5.40"
nvidia-nvtx-cu12 = "12.1.105"
opt-einsum = "3.3.0"
optax = "0.2.2"
optree = "0.11.0"
orbax-checkpoint = "0.5.15"
orjson = "3.10.3"
packaging = "24.0"
pexpect = "4.9.0"
pillow = "10.3.0"
pip-tools = "7.4.1"
pipdeptree = "2.22.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
premailer = "3.10.0"
proto-plus = "1.23.0"
protobuf = "4.25.3"
psycopg-binary = "3.1.18"
ptyprocess = "0.7.0"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pycparser = "2.22"
pydantic-core = "2.18.4"
pygments = "2.18.0"
pyparsing = "3.1.2"
pyproject-hooks = "1.1.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
rapidfuzz = "3.9.3"
regex = "2024.5.15"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rich = "13.7.1"
rsa = "4.9"
safetensors = "0.4.3"
scikit-learn = "1.5.0"
scipy = "1.13.1"
secretstorage = "3.3.3"
shapely = "2.0.4"
shellingham = "1.5.4"
six = "1.16.0"
sniffio = "1.3.1"
sqlalchemy = "2.0.28"
starlette = "0.37.2"
sympy = "1.12.1"
tensorboard = "2.16.2"
tensorboard-data-server = "0.7.2"
tensorflow = "2.16.1"
tensorstore = "0.1.60"
termcolor = "2.4.0"
threadpoolctl = "3.5.0"
tokenizers = "0.19.1"
tomli = "2.0.1"
tomlkit = "0.12.5"
toolz = "0.12.1"
torch = "2.3.1"
torchvision = "0.18.1"
tqdm = "4.66.4"
transformers = "4.41.2"
triton = "2.3.1"
trove-classifiers = "2024.5.22"
typer = "0.12.3"
typing-extensions = "4.12.2"
ujson = "5.10.0"
uritemplate = "4.1.1"
urllib3 = "2.2.1"
uvloop = "0.19.0"
virtualenv = "20.26.2"
watchfiles = "0.22.0"
websockets = "12.0"
werkzeug = "3.0.3"
wrapt = "1.16.0"
xt = "0.1.1"
zipp = "3.19.2"
pandas = "^2.2.2"
openpyxl = "^3.1.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.8.0"
ruff = "^0.2.2"
pre-commit = "^3.6.2"
types-passlib = "^1.7.7.20240106"
coverage = "^7.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true